--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <!-- dialog polyfill -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/dialog-polyfill@0.5.0/dist/dialog-polyfill.css">
   <style>
+    :root {
+      --color-text: #262c2c;
+    }
+    
     * {
       box-sizing: border-box;
     }
@@ -23,6 +27,7 @@
     }
 
     body {
+      color: var(--color-text);
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       line-height: 1.5;
       max-width: 44rem;
@@ -64,10 +69,11 @@
     }
     
     button {
-      font-size: 1rem;
-      background-color: none;
+      background-color: #f0f4f7;
       border-radius: .25rem;
       border: 2px solid #c9cbcc;
+      color: var(--color-text);
+      font-size: 1rem;
       height: 2.125rem;
       padding-right: 1rem;
       padding-left: 1rem;
@@ -87,12 +93,12 @@
     }
 
     dialog {
-      padding: 3rem 2rem;
-      width: 100%;
-      max-width: 24rem;
       border: none;
       border-radius: .25rem;
       box-shadow: 0 0 2rem .3rem rgba(0, 0, 0, .1);
+      padding: 3rem 2rem;
+      width: 100%;
+      max-width: 24rem;
     }
 
     input[type="text"] {
